[package]
name    = "ohkami_framework_benchmarks"
version = "0.14.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]

[dependencies]
ohkami  = { version = "=0.14.0", features = ["rt_tokio"] }
tokio   = { version = "=1.36.0", features = ["full"] }
rand    = { version = "=0.8.5" , features = ["small_rng"] }
sqlx    = { version = "=0.7.3" , features = ["postgres", "macros", "runtime-tokio-native-tls"] }